--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
                     <p style="color:grey;"><bold>Picture:<<bold> Universal Pictures</p>
         </address>
         <hr>
-            <h1>Story of oppenheimer</h1>
+             <h2 style="font-family:courier;color:grey"><del>The real story of Oppenheimer</del> </h2>
             <iframe width="853" height="480" src="https://www.youtube.com/embed/Xzv84ZdtlE0" title="The Real Story of Oppenheimer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <hr>   
-            <h1>A web iframe of bing</h1>
+             <h2 style="font-family:courier;color:grey"><mark>Web iframe of bing</mark> </h2>
         <iframe src="http://www.bing.com/" width="800" height="400"></iframe>
         <body>
 
